Fix spacing on form tab

--- a/imports/ui/css/Form.css
+++ b/imports/ui/css/Form.css
@@ -41,6 +41,7 @@ form {
   line-height: normal;
   letter-spacing: 0.001em;
   color: #ffffff;
+  margin-bottom: 15px;
 }
 
 .float-r{
